--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
+    "deprecated-react-native-prop-types": "^4.0.0",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
-    "react-native": "0.71.5",
+    "react-native": "0.71.6",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-image-slider-show": "^1.0.3",
     "react-native-ratings": "^8.1.0",
