--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-image-slider-show": "^1.0.3",
     "react-native-ratings": "^8.1.0",
