--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
     "deprecated-react-native-prop-types": "^4.0.0",
+    "link": "^1.5.1",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
-    "react-native": "0.71.6",
-    "react-native-linear-gradient": "^2.6.2",
+    "react-native": "^0.71.6",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-image-slider-show": "^1.0.3",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-ratings": "^8.1.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.5.0",
