--- a/package.json
+++ b/package.json
@@ -22,15 +22,19 @@
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-native": "^0.71.6",
+    "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-image-slider-show": "^1.0.3",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-onboarding-swiper": "^1.2.0",
     "react-native-ratings": "^8.1.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-size-matters": "^0.4.0",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-svg": "^13.9.0",
+    "react-native-svg-transformer": "^1.0.0",
     "react-redux": "^8.0.5",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0"
