--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "^7.0.1",
+    "@react-native-community/geolocation": "^3.0.6",
     "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.7",
@@ -25,6 +26,7 @@
     "react": "18.2.0",
     "react-native": "^0.71.6",
     "react-native-datepicker": "^1.7.2",
+    "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-image-crop-picker": "^0.39.0",
     "react-native-image-slider-show": "^1.0.3",
