--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-image-crop-picker": "^0.39.0",
     "react-native-image-slider-show": "^1.0.3",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-maps": "^1.7.1",
     "react-native-modal-datetime-picker": "^15.0.0",
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-ratings": "^8.1.0",
